<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bnu.studentlab.MainActivity">

    <TabHost
        android:id="@+id/tabhost"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >


            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <LinearLayout
                    android:id="@+id/tab1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:text="@string/chooceage"
                            android:id="@+id/agetext"
                            android:gravity="center"
                            android:layout_gravity="center"/>

                        <RadioGroup
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:id="@+id/agegroup"
                            android:layout_marginTop="20dp">
                            <RadioButton
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/primary"
                                android:id="@+id/primary"
                                android:layout_weight="1"
                                android:textSize="20sp" />

                            <RadioButton
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/middle"
                                android:id="@+id/middle"
                                android:layout_weight="1"
                                android:textSize="20sp"/>

                            <RadioButton
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/high"
                                android:id="@+id/high"
                                android:layout_weight="1"
                                android:textSize="20sp"/>
                        </RadioGroup>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/choocesubject"
                        android:id="@+id/subjecttext"
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:layout_marginTop="30dp"/>

                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:id="@+id/subjectgroup"
                        android:layout_marginTop="20dp">
                        <RadioButton
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/physics"
                            android:id="@+id/physic"
                            android:layout_weight="1"
                            android:textSize="20sp"/>

                        <RadioButton
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/chemistry"
                            android:id="@+id/chemistry"
                            android:layout_weight="1"
                            android:textSize="20sp"/>

                        <RadioButton
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/biology"
                            android:id="@+id/biology"
                            android:layout_weight="1"
                            android:textSize="20sp"/>
                    </RadioGroup>

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ok"
                        android:id="@+id/btnok"
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:layout_marginTop="30dp"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tab2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/choocelab"
                        android:id="@+id/textView"
                        android:layout_gravity="center_horizontal" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:text="@string/lab1"
                        android:id="@+id/lab1"
                        android:layout_gravity="center_horizontal" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/lab2"
                        android:id="@+id/lab2"
                        android:layout_gravity="center_horizontal" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/lab3"
                        android:id="@+id/lab3"
                        android:layout_gravity="center_horizontal" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/lab4"
                        android:id="@+id/lab4"
                        android:layout_gravity="center_horizontal" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/continuelab"
                        android:id="@+id/continuelab"
                        android:layout_gravity="center_horizontal" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tab3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical" >

                </LinearLayout>
                <LinearLayout
                    android:id="@+id/tab4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical" >

                    <ImageView
                        android:contentDescription="@string/photo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:layout_marginTop="100dp"
                        android:id="@+id/imageView"
                        android:src="@drawable/ic_launcher"/>

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/info"
                        android:id="@+id/infobtn"
                        android:layout_gravity="center_horizontal" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/morepoduct"
                        android:id="@+id/morepro"
                        android:layout_gravity="center_horizontal" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/aboutus"
                        android:id="@+id/aboutus"
                        android:layout_gravity="center_horizontal" />

                </LinearLayout>
            </FrameLayout>

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </TabWidget>

        </LinearLayout>
    </TabHost>
</RelativeLayout>
